ansible/yaml_files/httpd.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
        app.kubernetes.io/name: httpd
    spec:
      containers:
        - name: httpd
          image: httpd:latest
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: default
spec:
  # select them if you have to
  # here we are using gateway api, then
  # gateway api will handle forwarding
  # therefore we dont need following
  #type: LoadBalancer
  #type: ClusterIP
  selector:
    app.kubernetes.io/name: httpd
  ports:
    - port: 8081
      targetPort: 80
      name: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpd-route
  namespace: default
spec:
  parentRefs:
   - name: cilium-gateway
     namespace: kube-system
  hostnames:
   - "httpd.masum.com"
  rules:
   - backendRefs:
     - kind: Service
       name: httpd-service
       port: 8081
