ansible/yaml_files/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        app.kubernetes.io/name: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  # select them if you have to
  # here we are using gateway api, then
  # gateway api will handle forwarding
  # therefore we dont need following
  #type: LoadBalancer
  #type: ClusterIP
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - port: 8080
      targetPort: 80
      name: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: default
spec:
  parentRefs:
   - name: cilium-gateway
     namespace: kube-system
  hostnames:
   - "nginx.masum.com"
  rules:
   - backendRefs:
     - kind: Service
       name: nginx-service
       port: 8080
